--- a/stopwatch/stopwatch.qsf
+++ b/stopwatch/stopwatch.qsf
@@ -111,4 +111,20 @@ set_location_assignment PIN_AF14 -to CLOCK_50
 set_global_assignment -name VERILOG_FILE sevenseg.v
 
 
+set_location_assignment PIN_Y21 -to LED[9]
+set_location_assignment PIN_W21 -to LED[8]
+set_location_assignment PIN_W20 -to LED[7]
+set_location_assignment PIN_Y19 -to LED[6]
+set_location_assignment PIN_W19 -to LED[5]
+set_location_assignment PIN_W17 -to LED[4]
+set_location_assignment PIN_V18 -to LED[3]
+set_location_assignment PIN_V17 -to LED[2]
+set_location_assignment PIN_W16 -to LED[1]
+set_location_assignment PIN_V16 -to LED[0]
+set_location_assignment PIN_Y16 -to KEY[3]
+set_location_assignment PIN_W15 -to KEY[2]
+set_location_assignment PIN_AA15 -to KEY[1]
+set_location_assignment PIN_AA14 -to KEY[0]
+set_global_assignment -name VERILOG_FILE debouncer.v
+
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
