--- a/sc_computer/sc_computer.qsf
+++ b/sc_computer/sc_computer.qsf
@@ -1,17 +1,17 @@
 # -------------------------------------------------------------------------- #
 #
 # Copyright (C) 1991-2013 Altera Corporation
-# Your use of Altera Corporation's design tools, logic functions 
-# and other software and tools, and its AMPP partner logic 
-# functions, and any output files from any of the foregoing 
-# (including device programming or simulation files), and any 
-# associated documentation or information are expressly subject 
-# to the terms and conditions of the Altera Program License 
-# Subscription Agreement, Altera MegaCore Function License 
-# Agreement, or other applicable license agreement, including, 
-# without limitation, that your use is for the sole purpose of 
-# programming logic devices manufactured by Altera and sold by 
-# Altera or its authorized distributors.  Please refer to the 
+# Your use of Altera Corporation's design tools, logic functions
+# and other software and tools, and its AMPP partner logic
+# functions, and any output files from any of the foregoing
+# (including device programming or simulation files), and any
+# associated documentation or information are expressly subject
+# to the terms and conditions of the Altera Program License
+# Subscription Agreement, Altera MegaCore Function License
+# Agreement, or other applicable license agreement, including,
+# without limitation, that your use is for the sole purpose of
+# programming logic devices manufactured by Altera and sold by
+# Altera or its authorized distributors.  Please refer to the
 # applicable agreement for further details.
 #
 # -------------------------------------------------------------------------- #
@@ -42,7 +42,7 @@ set_global_assignment -name TOP_LEVEL_ENTITY sc_computer
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:21:25  DECEMBER 07, 2017"
 set_global_assignment -name LAST_QUARTUS_VERSION 13.1
-set_global_assignment -name VERILOG_FILE sc_instmen.v
+set_global_assignment -name VERILOG_FILE sc_instmem.v
 set_global_assignment -name VERILOG_FILE sc_datamem.v
 set_global_assignment -name VERILOG_FILE sc_cu.v
 set_global_assignment -name VERILOG_FILE sc_cpu.v
@@ -55,5 +55,4 @@ set_global_assignment -name VERILOG_FILE lpm_rom_irom.v
 set_global_assignment -name VERILOG_FILE lpm_ram_dq_dram.v
 set_global_assignment -name VERILOG_FILE dffe32.v
 set_global_assignment -name VERILOG_FILE dff32.v
-set_global_assignment -name VERILOG_FILE cla32.v
 set_global_assignment -name VERILOG_FILE alu.v
