--- a/sc_computer/sc_computer.qsf
+++ b/sc_computer/sc_computer.qsf
@@ -122,8 +122,22 @@ set_location_assignment PIN_V16 -to LEDR[0]
 
 
 
+
+set_global_assignment -name USE_CONFIGURATION_DEVICE ON
+set_global_assignment -name CRC_ERROR_OPEN_DRAIN ON
+set_global_assignment -name RESERVE_ALL_UNUSED_PINS_WEAK_PULLUP "AS INPUT TRI-STATED"
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
+set_global_assignment -name ACTIVE_SERIAL_CLOCK FREQ_100MHZ
+set_global_assignment -name MIF_FILE sc_instmem_prog.mif
+set_global_assignment -name MIF_FILE sc_instmem.mif
+set_global_assignment -name MIF_FILE sc_datamem.mif
+set_global_assignment -name MIF_FILE calculator_instmem.mif
+set_global_assignment -name VERILOG_FILE rom_1port.v
+set_global_assignment -name VERILOG_FILE ram_1port.v
 set_global_assignment -name BDF_FILE sc_computer.bdf
-set_global_assignment -name VERILOG_FILE sc_computer_sim.v
 set_global_assignment -name VERILOG_FILE sc_instmem.v
 set_global_assignment -name VERILOG_FILE sc_datamem.v
 set_global_assignment -name VERILOG_FILE sc_cu.v
@@ -139,5 +153,4 @@ set_global_assignment -name VERILOG_FILE alu.v
 set_global_assignment -name QIP_FILE ram_1port.qip
 set_global_assignment -name QIP_FILE rom_1port.qip
 set_global_assignment -name VERILOG_FILE clock_2T.v
-
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
