--- a/sc_computer/sc_computer.qsf
+++ b/sc_computer/sc_computer.qsf
@@ -153,4 +153,5 @@ set_global_assignment -name VERILOG_FILE alu.v
 set_global_assignment -name QIP_FILE ram_1port.qip
 set_global_assignment -name QIP_FILE rom_1port.qip
 set_global_assignment -name VERILOG_FILE clock_2T.v
+set_global_assignment -name VERILOG_FILE clock_adjust.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
